--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine On
 RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.+)$ /lms/ [QSA,L]
+RewriteRule ^(.+)$ /lms-dev/ [QSA,L]
